--- a/app/bookstore20/src/app/book-list/book-list.component.html
+++ b/app/bookstore20/src/app/book-list/book-list.component.html
@@ -1,4 +1,5 @@
 <div class="ui middle aligned selection divided list">
   <a *ngFor="let book of books" class="item bs-book-list-item"
-     [book]="book"></a>
+     [book]="book"
+      (click)="showDetails(book)"></a>
 </div>
