--- a/app/bookstore20/src/app/book-details/book-details.component.html
+++ b/app/bookstore20/src/app/book-details/book-details.component.html
@@ -41,4 +41,5 @@ icon"></i>
   </div>
 </div>
 
-<button (click)="showBookList()" class="ui red button">Zurück zur Liste</button>
+<button [routerLink]="'/books'" class="ui red button">Zurück zur
+  Buchliste</button>
