--- a/app/bookstore20/src/app/book-details/book-details.component.html
+++ b/app/bookstore20/src/app/book-details/book-details.component.html
@@ -44,12 +44,12 @@ icon"></i>
 <button [routerLink]="'/books'" class="ui red button">Zurück zur
   Buchliste</button>
 
-<a class="ui tiny yellow labeled icon button"
+<a *ngIf="authService.isLoggedIn()" class="ui tiny yellow labeled icon button"
    [routerLink]="['../../admin', book?.isbn]">
   <i class="write icon"></i>Buch bearbeiten
 </a>
 
-<button class="ui tiny red labeled icon button" (click)="removeBook()">
+<button *ngIf="authService.isLoggedIn()"  class="ui tiny red labeled icon button" (click)="removeBook()">
   <i class="remove icon"></i> Buch löschen
 </button>
 
